force-app/main/default/objects/Customer_Site__c/Customer_Site__c.object-meta.xml
<CustomObject>
    <description>Represents a physical customer location.</description>
    <label>Customer Site</label>
    <nameField>
        <label>Customer Site Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers Site</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>