force-app/main/default/objects/Customer_Site__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customers Site</relationshipLabel>
    <relationshipName>Customers_Site</relationshipName>
    <type>Lookup</type>
</CustomField>