force-app/main/default/objects/Customer_Site__c/fields/Primary_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Customers Site</relationshipLabel>
    <relationshipName>Customers_Site</relationshipName>
    <type>Lookup</type>
</CustomField>