force-app/main/default/objects/Customer_Site__c/fields/Site_Code__c.field-meta.xml
<CustomField>
    <fullName>Site_Code__c</fullName>
    <displayFormat>SITE-{0000}</displayFormat>
    <label>Site Code</label>
    <type>AutoNumber</type>
</CustomField>