force-app/main/default/objects/Customer_Site__c/fields/Site_Name__c.field-meta.xml
<CustomField>
    <fullName>Site_Name__c</fullName>
    <label>Site Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>