force-app/main/default/objects/Customer_Site__c/fields/Site_Status__c.field-meta.xml
<CustomField>
    <fullName>Site_Status__c</fullName>
    <label>Site Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Installation In Progress</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Decommissioned</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>