force-app/main/default/objects/Customer_Site__c/fields/Total_Installed_Assets__c.field-meta.xml
<CustomField>
    <fullName>Total_Installed_Assets__c</fullName>
    <label>Total Installed Assets</label>
    <summaryForeignKey>Machine_Asset__c.Customer_Site__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>